--- a/src/App.css
+++ b/src/App.css
@@ -421,3 +421,17 @@ a.active {
   width: 1.1rem;
   height: 1.1rem;
 }
+.box-err {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.err {
+  color:var(--rose-500) ;
+  font-weight: 600;
+  background : rgba(235, 157, 161, 0.7);
+  border-radius: 1rem;
+  padding: 1.3rem;
+  text-align: center;
+}
